# do_let_is

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  LICENSE  README.md  do_let_is.h
.github/workflows/: cmake-multi-platform.yml
all/: CMakeLists.txt
cmake/: CPM.cmake
examples/: CMakeLists.txt  example_generator.cc  generator.h  inplace_function.h
examples/src/: errored.cc  errored.h  example_generator.cc  expected.cc  expected.h  generator.cc  generator.h  generator_continuation_loopholes.h  generator_loopholes.cc  generator_loopholes.h  inplace_function.h  inplace_function_loopholes.h  loopholes.h  optional.cc  optional.h  optional_loop.cc  type_set.h  variant.cc  variant.h  vector.cc  vector.h
include/: do_let_is.h
include/do_let_is/: all.h  all_short.h  do_let_is.h  generator.h  generator_continuation_loopholes.h  generator_loopholes.h  inplace_function.h  inplace_function_loopholes.h  loopholes.h  short.h
old/: v0.h  v1.h
test/: CMakeLists.txt
test/src/: generator.cc  generator_loopholes.cc
